# faceless

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  install-triton.bat  install.ps1  mise.toml  pyproject.toml  requirements_cu128.txt  run_faceless.spec
.agents/assets/: README.template.md
.agents/references/: Example-YoloLabel.ps1  KEEPACHANGELOG_RULES.md
.github/instructions/: never-explain.instructions.md  release.instructions.md  version-bump.instructions.md
.github/workflows/: release.yml
examples/faceless/: .gitignore
examples/labels/: Olivia_Example01.txt  Olivia_Example02.txt  Olivia_Example03.txt  Olivia_Example04.txt  Olivia_Example05.txt  Olivia_Example06.txt  Olivia_Example07.txt  Olivia_Example08.txt  Olivia_Example09.txt  Olivia_Example11.txt  Olivia_Example12.txt  Olivia_Example13.txt  Olivia_Example14.txt  Olivia_Example15.txt  Olivia_Example16.txt  Olivia_Example17.txt  Olivia_Example18.txt  Olivia_Example19.txt  Olivia_Example20.txt  Olivia_Example21.txt  Olivia_Example22.txt  Olivia_Example23.txt  Olivia_Example24.txt  Olivia_Example25.txt  Olivia_Example26.txt  Olivia_Example27.txt  Olivia_Example28.txt  Olivia_Example29.txt  (+24 more)
faceless/: __init__.py  __main__.py  cli.py  config.py  configs.py  faceless.py  ffprobe.py  insightface.py  installer.py  models.py  run_faceless.py  users.py
references/: KEEPACHANGELOG_REPO.md  Oval vs. Oblong vs. Round - The Ultimate Guide to Understanding Face Shapes.md  XDG_Base_Directory.md  git_rebase.md
scripts/: Add-Faceless-ContextMenu.reg  ContextMenu.jinja.reg  Get-UserDirectory.py  Install-Dependencies.ps1  Invoke-Build.ps1  Invoke-Bump-Faceless-Version.ps1  Invoke-Clean.ps1  Invoke-Dev.ps1  Invoke-Devel.ps1  Invoke-Init.ps1  Invoke-Regression-Faceless.ps1  New-ContextMenu.py  New-Install.ps1  Reset-Examples.ps1  Set-Environment.ps1
tests/: test_faceless_regressions.py
(+15 files in other folders)
