[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceless"
version = "0.4.2"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ultralytics",
    "tqdm",
    "argparse",
]

[project.optional-dependencies]
dev = [
    "build",
    "pip",
    "cibuildwheel",
    "pyinstaller>=6"
]

[project.scripts]
faceless = "faceless:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["faceless*"]

# [tool.setuptools.package-data]
# faceless = ["labels/*.yaml"]
