[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceless"
version = "0.7.1"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ultralytics",
    "tqdm",
    "argparse",
    "opencv-python>=4.13.0.92",
]

[project.optional-dependencies]
dev = [
    "build",
    "pip",
    "cibuildwheel",
    "pyinstaller>=6"
]

[project.scripts]
faceless = "faceless:main"
run_faceless = "faceless:run_faceless"

[tool.setuptools.packages.find]
where = ["."]
include = ["faceless*"]

# [tool.setuptools.package-data]
# faceless = ["labels/*.yaml"]
